# proxyml-sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: api.md  quickstart.md
examples/: ProxyML Demo.ipynb  basic_usage.py  basic_usage.sh  basic_usage.ts  challenger_export_example.py  counterfactual_example.py  multiclass_example.py  regression_example.py  surrogate_export_example.py  testing_example.py
src/proxyml/: __init__.py  client.py  schema.py  schema_builder.py
src/proxyml/local/: __init__.py  challenger.py
tests/: test_client.py  test_dependency_boundaries.py  test_local_challenger.py  test_schema.py  test_schema_builder.py
